# piriform-cortex-diversity

./: README.md  environment.yml  pyproject.toml
code/: clusterize.py  data_loaders.py  neuron.py  plotting_tools.py
notebooks/: clustering.ipynb  data_loading.ipynb
notebooks/dev_notebooks/: dev_features.ipynb
